changing links so they work

--- a/StuartChristhilf/mkdocs.yml
+++ b/StuartChristhilf/mkdocs.yml
@@ -6,6 +6,8 @@ theme:
 nav:
   - Home: 'index.md'
   - About: 'about.md'
+  - Engineering Projects: 'Engineering.md'
+  - Coding Projects: 'coding.md'
 
 markdown_extensions:
   - attr_list
